ncp-features-example/2.1.0.2-wildcard-uri/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-wildcard-uri
  namespace: ncp-feature
  labels:
    feature: wildcard-uri 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: wildcard-uri
