ncp-features-example/2.1.0.2-wildcard-uri/nginx-web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-wildcard-uri
  namespace: ncp-feature
  labels:
    feature: wildcard-uri   
spec:
  rules:
  - host: wildcard-uri.demo.corp.local
    http:
      paths:
      - path: /tea/*
        backend:
          serviceName: nginx-wildcard-uri
          servicePort: 80
